--- a/about.html
+++ b/about.html
@@ -168,6 +168,19 @@
                   Applications. I am proficient in languages like
                   Python,JavaScript, HTML and CSS.
                 </p>
+                <!--                            <div class="row my-5">-->
+                <!--                                <div class="col-md-6">-->
+                <!--                                     <p><strong>Name:</strong> <span>Nova Sangeeth</span></p> -->
+                <!--                                    <p><strong>Address:</strong>-->
+                <!--                                        <span> 67/311, Guna Villas Mount Road, Coonoor - 643102</span></p>-->
+                <!--                                     <p><strong>Phone:</strong> <span>(123)-456-789</span></p> -->
+                <!--                                </div>-->
+                <!--                                &lt;!&ndash; <div class="col-md-6">-->
+                <!--                                    <p><strong>Name:</strong> <span>Nova Sangeeth</span></p>-->
+                <!--                                    <p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>-->
+                <!--                                    <p><strong>Phone:</strong> <span>(123)-456-789</span></p>-->
+                <!--                                </div> &ndash;&gt;-->
+                <!--                            </div>-->
               </div>
               <div class="exp mt-5 ftco-animate"></div>
 
@@ -194,80 +207,136 @@
                     <p>2016 - 2019</p>
                   </div>
                 </div>
+
+                <!-- <div class="exp-wrap py-4">
+                                <div class="desc">
+                                    <h4>Diploma in Information Technology<span> - Oxford University</span> </h4>
+                                    <p class="location">India - Chennai</p>
+                                </div>
+                                <div class="year">
+                                    <p>2008 - 2010</p>
+                                </div>
+                            </div> -->
+
+                <!-- <div class="exp-wrap py-4">
+                                <div class="desc">
+                                    <h4>Front-End Developer <span> - Big Comany</span> </h4>
+                                    <p class="location">India - Chennai</p>
+                                </div>
+                                <div class="year">
+                                    <p>2012 - 2014</p>
+                                </div>
+                            </div> -->
               </div>
             </div>
           </div>
           <!-- <div class="row mt-5 flex-column ftco-animate">
-                    <div class="col-md-8">
-                        <h2 class="mb-4">My Skills</h2>
-                    </div> -->
-          <!-- <div class="col-md-6 animate-box">
-                                  <div class="progress-wrap">
-                                      <h4>Photoshop</h4>
-                                      <div class="progress">
-                                           <div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                                          <span>75%</span>
-                                            </div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                                  <div class="progress-wrap">
-                                      <h4>jQuery</h4>
-                                      <div class="progress">
-                                           <div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                          <span>60%</span>
-                                            </div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="col-md-6 animate-box">
-                                  <div class="progress-wrap">
-                                      <h4>HTML5</h4>
-                                      <div class="progress">
-                                           <div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                          <span>85%</span>
-                                            </div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                                  <div class="progress-wrap">
-                                      <h4>CSS3</h4>
-                                      <div class="progress">
-                                           <div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                          <span>90%</span>
-                                            </div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="col-md-6 animate-box">
-                                  <div class="progress-wrap">
-                                      <h4>WordPress</h4>
-                                      <div class="progress">
-                                           <div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                          <span>70%</span>
-                                            </div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                                  <div class="progress-wrap">
-                                      <h4>SEO</h4>
-                                      <div class="progress">
-                                           <div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-                                            aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                          <span>80%</span>
-                                            </div>
-                                      </div>
-                                  </div>
-                              </div>
-            </div> -->
+            <div class="col-md-8">
+              <h2 class="mb-4">My Skills</h2>
+            </div>
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>Photoshop</h4>
+                <div class="progress">
+                  <div
+                    class="progress-bar color-1"
+                    role="progressbar"
+                    aria-valuenow="75"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 75%"
+                  >
+                    <span>75%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+              <div class="progress-wrap">
+                <h4>jQuery</h4>
+                <div class="progress">
+                  <div
+                    class="progress-bar color-1"
+                    role="progressbar"
+                    aria-valuenow="60"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 60%"
+                  >
+                    <span>60%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>HTML5</h4>
+                <div class="progress">
+                  <div
+                    class="progress-bar color-1"
+                    role="progressbar"
+                    aria-valuenow="85"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 85%"
+                  >
+                    <span>85%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+              <div class="progress-wrap">
+                <h4>CSS3</h4>
+                <div class="progress">
+                  <div
+                    class="progress-bar color-1"
+                    role="progressbar"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 90%"
+                  >
+                    <span>90%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box">
+              <div class="progress-wrap">
+                <h4>WordPress</h4>
+                <div class="progress">
+                  <div
+                    class="progress-bar color-1"
+                    role="progressbar"
+                    aria-valuenow="70"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 70%"
+                  >
+                    <span>70%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+              <div class="progress-wrap">
+                <h4>SEO</h4>
+                <div class="progress">
+                  <div
+                    class="progress-bar color-1"
+                    role="progressbar"
+                    aria-valuenow="80"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                    style="width: 80%"
+                  >
+                    <span>80%</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
         </section>
 
         <footer class="ftco-footer ftco-bg-dark ftco-section">
