--- a/contact.html
+++ b/contact.html
@@ -1,95 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Nova's Portfolio - Contact</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css" />
+    <link rel="stylesheet" href="css/animate.css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="css/magnific-popup.css" />
+    <link rel="stylesheet" href="css/aos.css" />
+    <link rel="stylesheet" href="css/ionicons.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
+    <link rel="stylesheet" href="css/jquery.timepicker.css" />
+    <link rel="stylesheet" href="css/flaticon.css" />
+    <link rel="stylesheet" href="css/icomoon.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
-
+  <body>
     <div class="KW_progressContainer">
-        <div class="KW_progressBar">
-
-        </div>
+      <div class="KW_progressBar"></div>
     </div>
     <div class="page">
-        <nav id="colorlib-main-nav" role="navigation">
-            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-            <div class="js-fullheight colorlib-table">
-                <div class="img" style="background-image: url(images/nova_logo.png);"></div>
-                <div class="colorlib-table-cell js-fullheight">
-                    <div class="row no-gutters">
-                        <div class="col-md-12 text-center">
-                            <h1 class="mb-4"><a href="index.html" class="logo">Nova Sangeeth</a></h1>
-                            <ul>
-                                <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                                <li><a href="services.html"><span><small>03</small>Technical Skills</span></a></li>
-                                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                                <li class="active"><a href="contact.html"><span><small>05</small>Contact</span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+      <nav id="colorlib-main-nav" role="navigation">
+        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"
+          ><i></i
+        ></a>
+        <div class="js-fullheight colorlib-table">
+          <div
+            class="img"
+            style="background-image: url(images/nova_logo.png)"
+          ></div>
+          <div class="colorlib-table-cell js-fullheight">
+            <div class="row no-gutters">
+              <div class="col-md-12 text-center">
+                <h1 class="mb-4">
+                  <a href="index.html" class="logo">Nova Sangeeth</a>
+                </h1>
+                <ul>
+                  <li>
+                    <a href="index.html"
+                      ><span><small>01</small>Home</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="about.html"
+                      ><span><small>02</small>Resume</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="services.html"
+                      ><span><small>03</small>Technical Skills</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="portfolio.html"
+                      ><span><small>04</small>Portfolio</span></a
+                    >
+                  </li>
+                  <li class="active">
+                    <a href="contact.html"
+                      ><span><small>05</small>Contact</span></a
+                    >
+                  </li>
+                </ul>
+              </div>
             </div>
-        </nav>
+          </div>
+        </div>
+      </nav>
 
-        <div id="colorlib-page">
-            <header>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="colorlib-navbar-brand">
-                                <a class="colorlib-logo" href="index.html"><span class="logo-img"
-                                        style="background-image: url(images/nova_logo.png);"></span>Nova
-                                    Sangeeth</a>
-                            </div>
-                            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-                        </div>
-                    </div>
+      <div id="colorlib-page">
+        <header>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="colorlib-navbar-brand">
+                  <a class="colorlib-logo" href="index.html"
+                    ><span
+                      class="logo-img"
+                      style="background-image: url(images/nova_logo.png)"
+                    ></span
+                    >Nova Sangeeth</a
+                  >
                 </div>
-            </header>
+                <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"
+                  ><i></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </header>
 
-            <section class="ftco-section contact-section">
-                <div class="container mt-5">
-                    <div class="row d-flex mb-5 contact-info">
-                        <div class="col-md-12 mb-4">
-                            <h2 class="h4">Contact Information</h2>
-                        </div>
-                        <div class="w-100"></div>
-                        <!--                    <div class="col-md-3">-->
-                        <!--                        <p><span>Address:</span></p>-->
-                        <!--                        <p> 67/311, Guna Villas, Mount Road, Coonoor, The Nilgiris, Tamil Nadu - 643102</p>-->
-                        <!--                    </div>-->
-                        <!--                    <div class="col-md-3">-->
-                        <!--                        <p><span>Phone:</span></p>-->
-                        <!--                        <p><a href="tel:950-024-6428"> +91 950-024-6428</a></p>-->
-                        <!--                    </div>-->
-                        <div class="col-md-3">
-                            <p><span>Email:</span></p>
-                            <p><a href="mailto:novasangeeth@gmail.com">novasangeeth@gmail.com</a></p>
-                        </div>
-                                           <!-- <div class="col-md-3">
-                                               <p><span>Website:</span></p>
-                                               <p><a href="www.novasangeeth.com">novasangeeth.com</a></p>
-                                           </div> -->
-                    </div>
-                    <!-- <div class="row block-9">
+        <section class="ftco-section contact-section">
+          <div class="container mt-5">
+            <div class="row d-flex mb-5 contact-info">
+              <div class="col-md-12 mb-4">
+                <h2 class="h4">Contact Information</h2>
+              </div>
+              <div class="w-100"></div>
+
+              <div class="col-md-3">
+                <p><span>Email:</span></p>
+                <p>
+                  <a href="mailto:novasangeeth@gmail.com"
+                    >novasangeeth@gmail.com</a
+                  >
+                </p>
+              </div>
+            </div>
+            <!-- <div class="row block-9">
                         <div class="col-md-6 pr-md-5">
                             <form action="#">
                                 <div class="form-group">
@@ -113,59 +141,79 @@
                         </div>
                          <div class="col-md-6" id="map"></div> 
                     </div> -->
-                </div>
-            </section>
+          </div>
+        </section>
 
-            <footer class="ftco-footer ftco-bg-dark ftco-section">
-                <div class="container">
-                    <div class="row mb-5 justify-content-center">
-                        <div class="col-md-5 text-center">
-                            <div class="ftco-footer-widget mb-5">
-                                <ul class="ftco-footer-social list-unstyled">
-                                    <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
+        <footer class="ftco-footer ftco-bg-dark ftco-section">
+          <div class="container">
+            <div class="row mb-5 justify-content-center">
+              <div class="col-md-5 text-center">
+                <div class="ftco-footer-widget mb-5">
+                  <ul class="ftco-footer-social list-unstyled">
+                    <!-- <li class="ftco-animate"><a href="https://www.facebook.com/nova.sangeeth"><span
                                         class="icon-facebook"></span></a></li>
                                 <li class="ftco-animate"><a href="https://www.instagram.com/novasangeeth/"><span
                                         class="icon-instagram"></span></a></li> -->
-                                    <li class="ftco-animate"><a
-                                            href="https://www.linkedin.com/in/nova-s-70825aa1/"><span
-                                                class="icon-linkedin"></span></a></li>
-                                    <li class="ftco-animate"><a href="https://github.com/nova-sangeeth"><span
-                                                class="icon-github"></span></a></li>
-                                </ul>
-                            </div>
-                            <div class="ftco-footer-widget">
-                                <h2 class="mb-3">Contact Me</h2>
-                                <p class="h3 email"><a href="mailto:novasangeeth@gmail.com">novasangeeth@gmail.com</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-
-                            <p>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
-                        </div>
-                    </div>
+                    <li class="ftco-animate">
+                      <a href="https://www.linkedin.com/in/nova-s-70825aa1/"
+                        ><span class="icon-linkedin"></span
+                      ></a>
+                    </li>
+                    <li class="ftco-animate">
+                      <a href="https://github.com/nova-sangeeth"
+                        ><span class="icon-github"></span
+                      ></a>
+                    </li>
+                  </ul>
                 </div>
-            </footer>
-
-            <!-- loader -->
-            <div id="ftco-loader" class="show fullscreen">
-                <svg class="circular" width="48px" height="48px">
-                    <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-                    <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-                        stroke="#F96D00" />
-                </svg>
+                <div class="ftco-footer-widget">
+                  <h2 class="mb-3">Contact Me</h2>
+                  <p class="h3 email">
+                    <a href="mailto:novasangeeth@gmail.com"
+                      >novasangeeth@gmail.com</a
+                    >
+                  </p>
+                </div>
+              </div>
             </div>
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <p>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+              </div>
+            </div>
+          </div>
+        </footer>
 
+        <!-- loader -->
+        <div id="ftco-loader" class="show fullscreen">
+          <svg class="circular" width="48px" height="48px">
+            <circle
+              class="path-bg"
+              cx="24"
+              cy="24"
+              r="22"
+              fill="none"
+              stroke-width="4"
+              stroke="#eeeeee"
+            />
+            <circle
+              class="path"
+              cx="24"
+              cy="24"
+              r="22"
+              fill="none"
+              stroke-width="4"
+              stroke-miterlimit="10"
+              stroke="#F96D00"
+            />
+          </svg>
         </div>
-
+      </div>
     </div>
-
 
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -181,11 +229,8 @@
     <script src="js/scrollax.min.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/jquery.timepicker.min.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
-
-</body>
-
+  </body>
 </html>
